Compilit the App Gl have fun :)

--- a/Aqua/MVVM/Views/BillnaPages/Billan.xaml
+++ b/Aqua/MVVM/Views/BillnaPages/Billan.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:persianDateControls="clr-namespace:Mohsen.PersianDateControls;assembly=Mohsen.PersianDateControls"
       xmlns:local="clr-namespace:Aqua.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="650" d:DesignWidth="1010"
@@ -22,30 +23,10 @@
 
         <Border Grid.Row="0" Grid.Column="0" Background="WhiteSmoke" CornerRadius="5 5 0 0" Grid.ColumnSpan="2">
             <Grid HorizontalAlignment="Center" Margin="10,0,0,0" Width="1000">
-                <TextBox x:Name="txtSearch" Height="30" Width="283" Background="WhiteSmoke" Foreground="Black"
-                 FontSize="15"
-                 FlowDirection="RightToLeft"
-                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" Margin="507,47,210,23" >
-
-                    <TextBox.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="10"/>
-                        </Style>
-                    </TextBox.Resources>
-                </TextBox>
+                <persianDateControls:PersianDatePicker x:Name="txtFromDate" Margin="620,45,0,25" HorizontalAlignment="Left" Height="30"/>
                 <TextBlock Text="تا تاریخ" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" Margin="430,47,520,23"/>
 
-                <TextBox x:Name="txtserach2" Margin="128,45,584,0" Height="30" Width="288" Background="WhiteSmoke" Foreground="Black"
-                 FontSize="15"
-                 VerticalAlignment="Top" FlowDirection="RightToLeft"
-                 VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" >
-
-                    <TextBox.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="10"/>
-                        </Style>
-                    </TextBox.Resources>
-                </TextBox>
+                <persianDateControls:PersianDatePicker x:Name="txtToDate" Margin="185,45,0,25" HorizontalAlignment="Left" Height="30"/>
                 <TextBlock Text="از تاریخ" Margin="809,47,141,0" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Top"/>
             </Grid>
         </Border>
@@ -55,10 +36,10 @@
                 <StackPanel>
                     <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" Grid.Row="5" x:Name="BillanNeg" Height="430" MaxHeight="650">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="تاریخ" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-                            <DataGridTextColumn Header="قیمت" IsReadOnly="True" Width="*" Binding="{Binding Price}"/>
-                            <DataGridTextColumn Header="نام" IsReadOnly="True" Width="*" Binding="{Binding Number}"/>
-                            <DataGridTextColumn x:Name="IDNeg" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding Date}"/>
+                            <DataGridTextColumn Header="تاریخ" IsReadOnly="True" Width="*" Binding="{Binding Date}"/>
+                            <DataGridTextColumn x:Name="PriceN" Header="قیمت" IsReadOnly="True" Width="*" Binding="{Binding Price}"/>
+                            <DataGridTextColumn Header="نام" IsReadOnly="True" Width="*" Binding="{Binding Name}"/>
+                            <DataGridTextColumn x:Name="IDNeg" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding IdNeg}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
@@ -70,10 +51,10 @@
                 <StackPanel>
                     <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="BillanPlus" Height="430" MaxHeight="650">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="تاریخ" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-                            <DataGridTextColumn Header="قیمت" IsReadOnly="True" Width="*" Binding="{Binding Price}"/>
-                            <DataGridTextColumn Header="نام" IsReadOnly="True" Width="*" Binding="{Binding Number}"/>
-                            <DataGridTextColumn x:Name="IDPlus" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding Date}"/>
+                            <DataGridTextColumn Header="تاریخ" IsReadOnly="True" Width="*" Binding="{Binding Date}"/>
+                            <DataGridTextColumn x:Name="PriceP" Header="قیمت" IsReadOnly="True" Width="*" Binding="{Binding Price}"/>
+                            <DataGridTextColumn Header="نام" IsReadOnly="True" Width="*" Binding="{Binding PlusName}"/>
+                            <DataGridTextColumn x:Name="IDPlus" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding IdPlus}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
@@ -82,17 +63,17 @@
 
         <Border Grid.Row="2">
             <Grid>
-                <Button Style="{StaticResource MenuButtonStorPage}" Width="170" Background="#469126" Content="بیلان گیری" FontSize="11" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50 0 0 0"/>
-                <Button Style="{StaticResource MenuButtonStorPage}" Width="170" Background="#53ad2b" Content="ثبت" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 50 0"/>
+                <Button Style="{StaticResource MenuButtonStorPage}" Width="170" Background="#469126" Content="بیلان گیری" FontSize="11" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50 0 0 0" Click="Button_Click"/>
+                <Button Style="{StaticResource MenuButtonStorPage}" Width="170" Background="#53ad2b" Content="ثبت" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 50 0" Click="Button_Click_1"/>
             </Grid>
         </Border>
 
         <Border Grid.Column="1" Grid.Row="2">
             <Grid>
                 <Button Style="{StaticResource MenuButtonStorPage}" Width="170" Margin="50,0,0,0" Background="Red" Content="حذف" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                <Button Style="{StaticResource MenuButtonStorPage}" Width="170" Margin="0,0,50,0" Background="#1067aa" Content="صفر کردن" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <Button Style="{StaticResource MenuButtonStorPage}" Width="170" Margin="0,0,50,0" Background="#1067aa" Content="صفر کردن" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Right" Click="Button_Click_2"/>
             </Grid>
         </Border>
 
-    </Grid> 
+    </Grid>
 </Page>
