--- a/Aqua/MVVM/Views/InvoicesPages/AllInvoices.xaml
+++ b/Aqua/MVVM/Views/InvoicesPages/AllInvoices.xaml
@@ -11,6 +11,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0" Background="WhiteSmoke" CornerRadius="5 5 0 0">
@@ -29,16 +30,14 @@
                 <TextBlock Text=":" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center" Margin="0 0 5 0"/>
                 <TextBlock Text="جست و جو" Style="{StaticResource MenoIconText}" FontFamily="Dirooz FD" FontSize="15" VerticalAlignment="Center"/>
                 <Button x:Name="btnRefresh" Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#53ad2b" Content="ثبت فاکتور فروش" FontSize="15" Click="btnRefresh_Click"/>
-                <Button x:Name="btnDelet" Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="Red" Content="حذف فاکتور" FontSize="15"/>
-                <Button x:Name="btnEdite" Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="#1067aa" Content="ویرایش فاکتور" FontSize="15"/>
+                <Button x:Name="btnDelet" Style="{StaticResource MenuButtonStorPage}" Width="130" Margin="5" Background="Red" Content="حذف فاکتور" FontSize="15" Click="btnDelet_Click"/>
             </StackPanel>
-
         </Border>
 
         <Border CornerRadius="0 0 5 5 " Background="WhiteSmoke" Grid.Row="1">
             <Border Grid.Column="1" Grid.Row="0" Margin="10 0 10 5">
                 <StackPanel>
-                    <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" Grid.Row="5" x:Name="AllINVDataGrid" Height="540" MaxHeight="650" RowStyle="{DynamicResource DataGridRowStyle1}">
+                    <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" x:Name="AllINVDataGrid" Height="280" MaxHeight="650" RowStyle="{DynamicResource DataGridRowStyle1}" SelectionChanged="AllINVDataGrid_SelectionChanged">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="تاریخ‌مراجعه بعدی" IsReadOnly="True" Width="*" Binding="{Binding SearchNextVisitDate}"/>
                             <DataGridTextColumn Header="تاریخ انجام کار" IsReadOnly="True" Width="*" Binding="{Binding SearchDateOfWork}"/>
@@ -54,5 +53,24 @@
                 </StackPanel>
             </Border>
         </Border>
+
+        <Border CornerRadius="0 0 5 5 " Background="WhiteSmoke" Grid.Row="2">
+            <Border Grid.Column="1" Grid.Row="0" Margin="10 0 10 5">
+                <StackPanel>
+                    <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" Grid.Row="5" x:Name="DetailsINVdataGrid" Height="260" MaxHeight="650" RowStyle="{DynamicResource DataGridRowStyle1}">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="جمع کل" IsReadOnly="True" Width="*" Binding="{Binding TPRice}"/>
+                            <DataGridTextColumn Header="فی واحد" IsReadOnly="True" Width="*" Binding="{Binding FiVahed}"/>
+                            <DataGridTextColumn Header="مدل محصول" IsReadOnly="True" Width="*" Binding="{Binding DeviceModel}"/>
+                            <DataGridTextColumn Header="قیمیت محصول" IsReadOnly="True" Width="*" Binding="{Binding ProductPrice}"/>
+                            <DataGridTextColumn Header="تعداد محصول" IsReadOnly="True" Width="*" Binding="{Binding ProductCount}"/>
+                            <DataGridTextColumn Header="نام محصول" IsReadOnly="True" Width="*" Binding="{Binding ProductName}"/>
+                            <DataGridTextColumn x:Name="IDD" Visibility="Hidden" Header="ردیف" IsReadOnly="True" Width="auto" Binding="{Binding INVId}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </StackPanel>
+            </Border>
+        </Border>
+
     </Grid>
 </Page>
