--- a/Aqua/MVVM/Views/BankChekPages/BankChekAddOrEdite.xaml
+++ b/Aqua/MVVM/Views/BankChekPages/BankChekAddOrEdite.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Aqua.MVVM.Views.BankChekPages"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        mc:Ignorable="d" Height="320" Width="900" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True"
+        mc:Ignorable="d" Height="400" Width="900" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True"
         xmlns:persianDateControls="clr-namespace:Mohsen.PersianDateControls;assembly=Mohsen.PersianDateControls"
         Background="Transparent" Loaded="Window_Loaded">
     <Border CornerRadius="5" Background="#edfefa">
@@ -22,7 +22,7 @@
                 <Border CornerRadius="0 0 5 5 " Background="#edfefa" Grid.Column="4">
                     <Border Grid.Column="1" Grid.Row="0" Margin="10 0 10 5">
                         <StackPanel>
-                            <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" Grid.Row="5" x:Name="BankAccDataGrid" Height="305" MaxHeight="650" Width="261" SelectionChanged="BankAccDataGrid_SelectionChanged">
+                            <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" Grid.Row="5" x:Name="BankAccDataGrid" Height="385" MaxHeight="650" Width="261" SelectionChanged="BankAccDataGrid_SelectionChanged">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Header="شعبه بانک" IsReadOnly="True" Width="*" Binding="{Binding BankBeranch}"/>
                                     <DataGridTextColumn Header="نام بانک" IsReadOnly="True" Width="*" Binding="{Binding BankName}"/>
@@ -86,6 +86,17 @@ VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a">
                     </TextBox>
 
                     <Button x:Name="btnSave" Grid.Column="2" Width="113" Height="40" Margin="0,15,0,0" Style="{StaticResource ButtonStyle}" Background="Green" Content="افزودن دسته چک" Foreground="White" FontFamily="Dirooz FD" Click="btnSave_Click"/>
+
+                    <CheckBox x:Name="ckb0" Grid.Row="1" Margin="0,25,0,0" 
+            Content="دریافتی" IsThreeState="True"
+            Checked="ckb0_Checked"
+            FontFamily="Dirooz FD" Width="55"/>
+
+                    <CheckBox x:Name="ckb1" Margin="0 10 0 0"
+Content="پرداختی" IsThreeState="True"
+Checked="ckb1_Checked"
+FontFamily="Dirooz FD" Width="58"/>
+
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" Margin="0 20 20 0">
