--- a/Aqua/MVVM/Views/HomePage.xaml
+++ b/Aqua/MVVM/Views/HomePage.xaml
@@ -21,16 +21,7 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Grid Grid.Column="0" Grid.Row="0">
-                <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Right" Margin="10,40,10,10">
-                    <lvc:CartesianChart.AxisX>
-                        <lvc:Axis Title="X Axis" Labels="{Binding Labels}"></lvc:Axis>
-                    </lvc:CartesianChart.AxisX>
-                    <lvc:CartesianChart.AxisY>
-                        <lvc:Axis Title="Y Axis"></lvc:Axis>
-                    </lvc:CartesianChart.AxisY>
-                </lvc:CartesianChart>
-            </Grid>
+            <Grid Grid.Column="0" Grid.Row="0"/>
 
             <Border Grid.Column="1" Grid.Row="0" Margin="5 0 5 5">
                 <StackPanel>
@@ -40,25 +31,25 @@
                     <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" Grid.Row="5" x:Name="dtgShowChek" Height="275" MaxHeight="275" Width="478">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="بانک" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
-                            <DataGridTextColumn Header="مبلغ" IsReadOnly="True" Width="*" Binding="{Binding Price}"/>
-                            <DataGridTextColumn Header="در وجه" IsReadOnly="True" Width="*" Binding="{Binding Number}"/>
-                            <DataGridTextColumn Header="تاریخ چک" IsReadOnly="True" Width="auto" Binding="{Binding Date}"/>
+                            <DataGridTextColumn Header="مبلغ" IsReadOnly="True" Width="*" Binding="{Binding ChekPrice}"/>
+                            <DataGridTextColumn Header="در وجه" IsReadOnly="True" Width="*" Binding="{Binding Assignment}"/>
+                            <DataGridTextColumn Header="شماره چک" IsReadOnly="True" Width="auto" Binding="{Binding ChekNumber}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
             </Border>
 
-            <Border Grid.Column="1" Grid.Row="1" Margin="5 0 5 5">
+            <Border Grid.Column="0" Grid.Row="0" Margin="5 0 5 5">
                 <StackPanel>
                     <TextBlock Text="بستانکاران" FontSize="15" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 5 0 0"
 FontFamily="Dirooz FD"/>
 
                     <DataGrid Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" Grid.Row="5" x:Name="dtgDetebtorHome" Height="275" MaxHeight="275" Width="478">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="توضیحات" IsReadOnly="True" Width="*" Binding="{Binding Bank}"/>
+                            <DataGridTextColumn Header="توضیحات" IsReadOnly="True" Width="*" Binding="{Binding Descriptions}"/>
                             <DataGridTextColumn Header="مبلغ" IsReadOnly="True" Width="*" Binding="{Binding Price}"/>
-                            <DataGridTextColumn Header="در وجه" IsReadOnly="True" Width="*" Binding="{Binding Number}"/>
-                            <DataGridTextColumn Header="طرف حساب" IsReadOnly="True" Width="aUTO" Binding="{Binding Date}"/>
+                            <DataGridTextColumn Header="نوع" IsReadOnly="True" Width="*" Binding="{Binding Type}"/>
+                            <DataGridTextColumn Header="طرف حساب" IsReadOnly="True" Width="aUTO" Binding="{Binding Name}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
