--- a/Aqua/MainWindow.xaml
+++ b/Aqua/MainWindow.xaml
@@ -85,12 +85,12 @@
                             </DockPanel>
                         </Button>
 
-                        <Button x:Name="btnSetting" Style="{StaticResource MenuButton}" Click="btnSetting_Click">
+                        <!--<Button x:Name="btnSetting" Style="{StaticResource MenuButton}" Click="btnSetting_Click">
                             <DockPanel>
                                 <Image Source="Image/Setting.png" Width="35" DockPanel.Dock="Right" Margin="10 0 0 0"/>
                                 <TextBlock Text="تنظیمات" VerticalAlignment="Center" Margin="13,0,0,0"/>
                             </DockPanel>
-                        </Button>
+                        </Button>-->
                     </StackPanel>
                 </Grid>
             </Border>
