--- a/Aqua/MVVM/Views/InvoicesPages/PrintSalesInvoice.xaml
+++ b/Aqua/MVVM/Views/InvoicesPages/PrintSalesInvoice.xaml
@@ -63,7 +63,7 @@
 
             <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBlock  Text="فروشگاه آبتین" Margin="0 0 0 0" FontWeight="Heavy" FontSize="25" HorizontalAlignment="Center"/>
-                <TextBlock  Text="نمایندگی رسمی محصولات آکوجی کانادا" Margin="0 10 0 0" FontSize="11" HorizontalAlignment="Center"/>
+                <TextBlock  Text="نمایندگی رسمی محصولات آکواجوی کانادا" Margin="0 10 0 0" FontSize="11" HorizontalAlignment="Center"/>
                 <TextBlock  Text="فروش خدماتی پس از فروش کلیه دستگاهای تصفیه آب و تصفیه هوا" Margin="0 10 0 0" FontSize="11" HorizontalAlignment="Center"/>
                 <TextBlock  Text="نشانی : پردیس فاز یک میدان عدالت تجاری ولیعصر طبقه ۲ پلاک ۱۴۳" Margin="0 10 0 0" FontSize="11" HorizontalAlignment="Center"/>
             </StackPanel>
